--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html >
 <!-- #1 #structure #document -->
-<html>
+<html lang="en">
 <head>
 
     <!-- #1 #structure #title -->
@@ -76,6 +76,15 @@
             font-style: normal;
         }
 
+        li {
+            background: white;
+            list-style-type: none;
+        }
+
+        .container {
+            background: white;
+            width: 80%;
+        }
     </style>
 
 </head>
@@ -84,20 +93,23 @@
 
 <!-- channel area -->
 <!-- #1 #channels #app-bar -->
-<h1>chatter|app</h1>
+<h1><img src="https://ip.lfe.mw.tum.de/sections/moocus.png" alt="picture of moocus" height="56">chatter|app</h1>
 
 <!-- #1 #channels #topics -->
-<h2>#Yummy</h2>
-<h2>#SevenContinents</h2>
-<h2>#KillerApp</h2>
-<h2>#FirstPersonOnMars</h2>
-<h2>#Octoberfest</h2>
+<ul>
+    <li><h2>#Yummy<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="picture of a checked star"></h2></li>
+    <li><h2>#SevenContinents<img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="picture of an unchecked star"></h2></li>
+    <li><h2>#KillerApp<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="picture of a checked star"></h2></li>
+    <li><h2>#FirstPersonOnMars<img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="picture of an unchecked star"></h2></li>
+    <li><h2>#Octoberfest<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="picture of a checked star"></h2></li>
+</ul>
 
 <!-- #1 #channels #buttons -->
-<button>new</button>
-<button>trending</button>
-<button>favorites</button>
-
+<div>
+    <button><img src="https://ip.lfe.mw.tum.de/sections/lightbulb-o.png" alt="picture of a lightbulb">new</button>
+    <button><img src="https://ip.lfe.mw.tum.de/sections/fire.png" alt="picture of a flame">trending</button>
+    <button><img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="picture of a checked star">favorites</button>
+</div>
 
 <!-- chat area -->
 <!-- #1 #chat #name -->
@@ -112,80 +124,92 @@
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>cheeses.yard.applies</strong>
+    <strong><a href="https://map.what3words.com/cheeses.yard.applies?maptype=satellite" style="color:black">cheeses.yard.applies</a></strong>
     Wed, June 20th, 13:37
     <!-- #1 #chat #ttl lives inside the metadata -->
     <em>15 min. left</em>
 </h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>What's the place you folks call home?</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+    <div class="container">
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>What's the place you folks call home?</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+    </div>
 
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>truck.cotton.zone</strong>
+    <strong><a href="https://map.what3words.com/Atruck.cotton.zone?maptype=satellite" style="color:black">Atruck.cotton.zone</a></strong>
     Wed, June 20th, 13:39
     <!-- #1 #chat #ttl lives inside the metadata -->
     <em>4 min. left</em>
 </h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>BRISBANE! Hang loose!</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+    <div class="container">
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>BRISBANE! Hang loose!</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+    </div>
 
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>thus.best.dishes</strong>
+    <strong><a href="https://map.what3words.com/thus.best.dishes?maptype=satellite" style="color:black">thus.best.dishes</a></strong>
     Wed, June 20th, 14:02
     <!-- #1 #chat #ttl lives inside the metadata -->
     <em>12 min. left</em>
 </h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>The big apple.</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+    <div class="container">
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>The big apple.</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+    </div>
 
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>driveway.helper.magazine</strong>
+    <strong><a href="https://map.what3words.com/driveway.helper.magazine?maptype=satellite" style="color:black">driveway.helper.magazine</a></strong>
     Wed, June 20th, 14:02
     <!-- #1 #chat #ttl lives inside the metadata -->
     <em>7 min. left</em>
 </h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>Eu sou um Carocas.</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+    <div class="container">
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>Eu sou um Carocas.</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+    </div>
 
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>escapes.pitch.saucepan</strong>
+    <strong><a href="https://map.what3words.com/escapes.pitch.saucepan?maptype=satellite" style="color:black">escapes.pitch.saucepan</a></strong>
     Wed, June 20th, 14:07
     <!-- #1 #chat #ttl lives inside the metadata -->
     <em>14 min. left</em>
 </h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>Greetings from the western cape!</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+    <div class="container">
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>Greetings from the western cape!</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+    </div>
 
 <!-- #1 #chat #metadata contains location, weekday, day, and time  -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>meanings.identity.pays</strong>
+    <strong><a href="https://map.what3words.com/meanings.identity.pays?maptype=satellite" style="color:black">meanings.identity.pays</a></strong>
     Wed, June 20th, 04:08
     <!-- #1 #chat #ttl lives inside the metadata -->
     <em>15 min. left</em>
 </h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>北京</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+    <div class="container">
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>北京</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+    </div>
 
 </body>
 </html>
